--- a/app/src/main/res/layout/fragment_calendar_list.xml
+++ b/app/src/main/res/layout/fragment_calendar_list.xml
@@ -26,7 +26,7 @@
             app:tabIndicatorHeight="2dp"
             app:tabMode="fixed"/>
 
-    <androidx.viewpager.widget.ViewPager
+    <com.icoo.ssgsag_android.util.view.NonSwipeViewPager
             android:id="@+id/frag_cal_list_vp"
             android:layout_width="match_parent"
             android:layout_height="0dp"
