--- a/app/src/main/res/layout/fragment_calendar_list_page.xml
+++ b/app/src/main/res/layout/fragment_calendar_list_page.xml
@@ -36,7 +36,8 @@
                             android:layout_marginHorizontal="6dp">
                         <ImageView
                                 android:layout_width="wrap_content"
-                                android:layout_height="wrap_content" />
+                                android:layout_height="wrap_content"
+                                selectedFilterImg="@{vm.isLastSaveFilter}"/>
                         <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -65,7 +66,8 @@
                             android:layout_marginHorizontal="6dp">
                         <ImageView
                                 android:layout_width="wrap_content"
-                                android:layout_height="wrap_content" />
+                                android:layout_height="wrap_content"
+                                selectedFilterImg="@{!vm.isLastSaveFilter}"/>
                         <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -91,14 +93,14 @@
                     app:layout_constraintTop_toBottomOf="@+id/frag_cal_list_page_ll_filter"
                     android:background="@color/white"/>
 
-            <ProgressBar
-                    android:visibility="@{vm.isProgress}"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"/>
+<!--            <ProgressBar-->
+<!--                    android:visibility="@{vm.isProgress}"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    app:layout_constraintTop_toTopOf="parent"-->
+<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                    app:layout_constraintStart_toStartOf="parent"-->
+<!--                    app:layout_constraintEnd_toEndOf="parent"/>-->
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
