--- a/app/src/main/res/layout/item_calendar_list.xml
+++ b/app/src/main/res/layout/item_calendar_list.xml
@@ -22,8 +22,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="8dp"
-                android:layout_marginLeft="24dp">
-<!--                dateLine = "@{schedule.isAlone()}">-->
+                android:layout_marginLeft="24dp"
+                dateLine = "@{schedule.isAlone()}">
             <TextView
                     android:id="@+id/item_calendar_list_tv_date"
                     android:layout_width="wrap_content"
@@ -118,7 +118,7 @@
                             <androidx.cardview.widget.CardView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    app:cardBackgroundColor="#26656ef0"
+                                    app:cardBackgroundColor="@color/white"
                                     app:cardCornerRadius="3dp"
                                     app:cardElevation="0dp"
                                     app:contentPaddingLeft="2dp"
