--- a/app/src/main/res/layout/activity_calendar_detail.xml
+++ b/app/src/main/res/layout/activity_calendar_detail.xml
@@ -267,11 +267,147 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="22dp"
-                        android:layout_marginBottom="18dp"
+                        android:layout_marginBottom="13dp"
                         app:calendarDetailReplaceAll="@{vm.posterDetail}">
 
                 </androidx.recyclerview.widget.RecyclerView>
 
+                <androidx.cardview.widget.CardView
+                        cvVisibilityByIntR="@{vm.posterDetail.isSave}"
+                        android:visibility="gone"
+                        android:id="@+id/act_cal_detail_cv_store"
+                        android:layout_width="match_parent"
+                        android:layout_height="48dp"
+                        android:layout_marginHorizontal="20dp"
+                        app:cardCornerRadius="4dp"
+                        app:cardBackgroundColor="@color/ssgsag"
+                        android:layout_marginBottom="12dp"
+                        app:cardElevation="0dp">
+                    <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/noto_sans_kr_medium"
+                            android:textSize="14sp"
+                            android:textColor="@color/white"
+                            android:text="일정 저장하기"
+                            android:layout_gravity="center"
+                            />
+                </androidx.cardview.widget.CardView>
+
+                <LinearLayout
+                        llVisibilityByInt="@{vm.posterDetail.isSave}"
+                        android:id="@+id/act_cal_detail_ll_stored_container"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_marginHorizontal="20dp"
+                        android:layout_marginBottom="12dp">
+                <androidx.cardview.widget.CardView
+                        android:layout_weight="1"
+                        android:id="@+id/act_cal_detail_cv_cancel_store"
+                        android:layout_width="match_parent"
+                        android:layout_height="48dp"
+                        app:cardCornerRadius="4dp"
+                        android:layout_marginRight="4dp"
+                        app:cardElevation="0dp">
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="@drawable/border_656ef0_4_thin">
+                        <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                android:fontFamily="@font/noto_sans_kr_regular"
+                                android:textSize="14sp"
+                                android:textColor="@color/ssgsag"
+                                android:text="일정 저장됨"
+                                android:layout_gravity="center"
+                                />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+                </androidx.cardview.widget.CardView>
+
+                    <androidx.cardview.widget.CardView
+                            cvVisibilityByIntR="@{vm.posterDetail.isFavorite}"
+                            tools:visibility="gone"
+                            android:layout_weight="1"
+                            android:id="@+id/act_cal_detail_cv_bookmark"
+                            android:layout_width="match_parent"
+                            android:layout_height="48dp"
+                            app:cardCornerRadius="4dp"
+                            app:cardElevation="0dp"
+                            android:layout_marginLeft="4dp">
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:background="#f2c801">
+                        <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:layout_gravity="center"
+                                android:gravity="center_vertical"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent">
+                            <ImageView
+                                    android:layout_width="24dp"
+                                    android:layout_height="24dp"
+                                    android:src="@drawable/ic_favorite_white_filled"
+                                    android:layout_marginRight="4dp"/>
+                            <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:fontFamily="@font/noto_sans_kr_regular"
+                                    android:textSize="14sp"
+                                    android:textColor="@color/white"
+                                    android:text="즐겨찾기/알림" />
+                        </LinearLayout>
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+                    </androidx.cardview.widget.CardView>
+
+                    <androidx.cardview.widget.CardView
+                            cvVisibilityByInt="@{vm.posterDetail.isFavorite}"
+                            android:layout_weight="1"
+                            android:id="@+id/act_cal_detail_cv_bookmarked"
+                            android:layout_width="match_parent"
+                            android:layout_height="48dp"
+                            app:cardCornerRadius="4dp"
+                            app:cardElevation="0dp"
+                            android:layout_marginLeft="4dp">
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:background="@drawable/border_ffd026_4_thin">
+                            <LinearLayout
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="match_parent"
+                                    android:layout_gravity="center"
+                                    android:gravity="center_vertical"
+                                    app:layout_constraintTop_toTopOf="parent"
+                                    app:layout_constraintBottom_toBottomOf="parent"
+                                    app:layout_constraintStart_toStartOf="parent"
+                                    app:layout_constraintEnd_toEndOf="parent">
+                                <ImageView
+                                        android:layout_width="24dp"
+                                        android:layout_height="24dp"
+                                        android:src="@drawable/ic_favorite_active"
+                                        android:layout_marginRight="4dp"/>
+                                <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:fontFamily="@font/noto_sans_kr_regular"
+                                        android:textSize="14sp"
+                                        android:textColor="@color/black_1"
+                                        android:text="즐겨찾기 등록됨" />
+                            </LinearLayout>
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+                    </androidx.cardview.widget.CardView>
+                </LinearLayout>
+                
                 <View
                         android:layout_width="match_parent"
                         android:layout_height="6dp"
@@ -872,70 +1008,71 @@
                 android:layout_width="match_parent"
                 android:layout_height="46dp"
                 android:orientation="horizontal">
-
-            <ImageView
-                    android:id="@+id/act_cal_detail_iv_bookmark"
-                    android:background="#656ef0"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:bookmarkBtnImg="@{vm.posterDetail.isFavorite}"
-                    android:src="@drawable/favorite_white_box_passive"/>
-
-            <TextView
-                    android:id="@+id/act_cal_detail_tv_go_website"
-                    android:background="#656ef0"
-                    android:text="웹사이트"
-                    android:fontFamily="@font/noto_sans_kr_regular"
-                    android:layout_weight="1"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/act_cal_detail_cl_go_website"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:textSize="14sp"
-                    android:textColor="@color/white"
-                    android:gravity="center"
-                    webSiteText="@{vm.webUrl}"/>
+                    android:layout_weight="1"
+                    android:background="@color/ssgsag">
+                <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:gravity="center_vertical">
+                <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_website"
+                        android:layout_marginRight="3dp"/>
+                <TextView
+                        android:background="#656ef0"
+                        android:text="웹사이트"
+                        android:fontFamily="@font/noto_sans_kr_regular"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="14sp"
+                        android:textColor="@color/white"
+                        android:gravity="center"
+                        webSiteText="@{vm.webUrl}" />
+                </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/act_cal_detail_cl_apply"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@color/ssgsag">
+            <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:gravity="center_vertical">
+
+            <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_apply_rightnow"
+                    android:layout_marginRight="3dp"/>
             <TextView
                     android:id="@+id/act_cal_detail_tv_apply"
                     android:background="#656ef0"
                     android:text="바로지원"
                     android:fontFamily="@font/noto_sans_kr_regular"
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:textSize="14sp"
-                    android:textColor="#33ffffff"
-                    android:gravity="center"/>
-            <RelativeLayout
-                    android:visibility="gone"
-                    tools:visibility="visible"
-                    android:id="@+id/act_cal_detail_rl_store"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="#656ef0">
-                <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true">
-
-                    <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            savePoster="@{vm.posterDetail.isSave()}"
-                            android:layout_gravity="center_vertical"/>
-                    <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            savePoster="@{vm.posterDetail.isSave()}"
-                            android:fontFamily="@font/noto_sans_kr_regular"
-                            android:textSize="14sp"
-                            android:textAlignment="center"
-                            android:lineHeight="15sp"
-                            android:textColor="@color/white"
-                            android:layout_marginLeft="5dp"/>
-                </LinearLayout>
-            </RelativeLayout>
-
+                    android:textColor="@color/white"/>
+            </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         </LinearLayout>
 
