--- a/app/src/main/res/layout/fragment_calendar_list_page.xml
+++ b/app/src/main/res/layout/fragment_calendar_list_page.xml
@@ -35,6 +35,38 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
+
+                <androidx.cardview.widget.CardView
+                        android:id="@+id/frag_cal_list_page_cv_deadline"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="8dp"
+                        app:cardCornerRadius="4dp"
+                        selectedBgSsgsag="@{!vm.isLastSaveFilter}"
+                        app:cardElevation="0dp">
+                    <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:layout_marginVertical="2dp"
+                            android:layout_marginHorizontal="6dp">
+                        <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                selectedFilterImg="@{!vm.isLastSaveFilter}"
+                                android:layout_gravity="center_vertical"/>
+                        <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="마감 순"
+                                android:textColor="@color/grey_1"
+                                android:textSize="12sp"
+                                android:fontFamily="@font/noto_sans_kr_regular"
+                                android:includeFontPadding="false"
+                                selectedTextSsgsag="@{!vm.isLastSaveFilter}"/>
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+
                 <androidx.cardview.widget.CardView
                         android:id="@+id/frag_cal_list_page_cv_last_save"
                         android:layout_width="wrap_content"
@@ -62,37 +94,6 @@
                                 android:fontFamily="@font/noto_sans_kr_regular"
                                 android:includeFontPadding="false"
                                 selectedTextSsgsag="@{vm.isLastSaveFilter}"/>
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                        android:id="@+id/frag_cal_list_page_cv_deadline"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
-                        app:cardCornerRadius="4dp"
-                        selectedBgSsgsag="@{!vm.isLastSaveFilter}"
-                        app:cardElevation="0dp">
-                    <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:layout_marginVertical="2dp"
-                            android:layout_marginHorizontal="6dp">
-                        <ImageView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                selectedFilterImg="@{!vm.isLastSaveFilter}"
-                                android:layout_gravity="center_vertical"/>
-                        <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="마감 순"
-                                android:textColor="@color/grey_1"
-                                android:textSize="12sp"
-                                android:fontFamily="@font/noto_sans_kr_regular"
-                                android:includeFontPadding="false"
-                                selectedTextSsgsag="@{!vm.isLastSaveFilter}"/>
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
