--- a/app/src/main/res/layout/activity_calendar_list_delete.xml
+++ b/app/src/main/res/layout/activity_calendar_list_delete.xml
@@ -55,6 +55,29 @@
             app:layout_constraintTop_toBottomOf="@id/act_cal_list_delete_cl_toolbar"
             app:layout_constraintBottom_toTopOf="@+id/act_cal_list_delete_cl_delete"/>
 
+    <LinearLayout
+            android:id="@+id/act_cal_list_delete_ll_empty"
+            android:visibility="gone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:orientation="vertical"
+            android:gravity="center">
+        <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/img_empty"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:textColor="@color/grey_1"
+                android:text="저장된 추후 일정이 없습니다."
+                android:layout_marginTop="12dp" />
+    </LinearLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/act_cal_list_delete_cl_delete"
