--- a/app/src/main/res/layout/fragment_calendar_list_page.xml
+++ b/app/src/main/res/layout/fragment_calendar_list_page.xml
@@ -12,20 +12,6 @@
                 android:layout_height="match_parent"
                 android:background="@color/white">
 
-            <TextView
-                    android:visibility="gone"
-                    android:id="@+id/frag_cal_list_page_tv_empty"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="저장된 추후 일정이 없습니다"
-                    android:textColor="@color/grey_1"
-                    android:fontFamily="@font/noto_sans_kr_regular"
-                    android:textSize="12sp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"/>
-
             <LinearLayout
                     android:id="@+id/frag_cal_list_page_ll_filter"
                     app:layout_constraintTop_toTopOf="parent"
@@ -110,6 +96,30 @@
                     android:layout_marginTop="8dp"
                     android:paddingBottom="120dp"
                     android:clipToPadding="false" />
+
+            <LinearLayout
+                    android:id="@+id/frag_cal_list_page_ll_empty"
+                    android:visibility="gone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:orientation="vertical"
+                    android:gravity="center">
+                <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/img_empty"/>
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="12sp"
+                        android:textColor="@color/grey_1"
+                        android:text="저장된 추후 일정이 없습니다."
+                        android:layout_marginTop="12dp" />
+            </LinearLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
