--- a/app/src/main/res/layout/activity_community_board.xml
+++ b/app/src/main/res/layout/activity_community_board.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -31,7 +32,7 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"
+                android:textSize="16dp"
                 android:fontFamily="@font/noto_sans_kr_bold"
                 android:textColor="@color/black_2"
                 android:text="@string/counsel_title"
@@ -65,8 +66,12 @@
             app:tabTextColor="#bbbbbb"
             app:tabIndicatorColor="@color/ssgsag"
             app:tabIndicatorHeight="2dp"
-            app:tabMode="fixed"
-            app:tabGravity="fill"
+            app:tabMode="auto"
+            app:tabGravity="start"
+            app:tabMinWidth="50dp"
+            app:tabPaddingStart="12dp"
+            app:tabPaddingEnd="12dp"
+            android:textAlignment="center"
             app:layout_constraintTop_toBottomOf="@+id/act_community_board_cl_toolbar"
             app:layout_constraintStart_toStartOf="parent"/>
     <pl.pzienowicz.autoscrollviewpager.AutoScrollViewPager
@@ -134,3 +139,4 @@
     </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
